--- a/index.html
+++ b/index.html
@@ -1,439 +1,11 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Latpara Kollan Trust</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #e3f2fd;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #006666;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 24px;
-    }
-    main {
-      max-width: 800px;
-      margin: 30px auto;
-      background: white;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    }
-    input, select, button {
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
-    button {
-      background: #006666;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #004d4d;
-    }
-    nav {
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    nav a {
-      margin: 0 10px;
-      cursor: pointer;
-      color: #006666;
-      font-weight: bold;
-      text-decoration: none;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .hidden { display: none; }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 15px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: center;
-    }
-    thead {
-      background: #006666;
-      color: white;
-    }
-    .success { color: green; font-weight: bold; }
-    .error { color: red; }
-    .filter-section {
-      margin-top: 15px;
-      margin-bottom: 15px;
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-    .filter-section label {
-      font-weight: bold;
-      white-space: nowrap;
-    }
-    .filter-section select {
-      width: auto;
-      flex-grow: 1;
-      min-width: 120px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hosing</title>
 </head>
 <body>
-
-<header>Latpara Kollan Trust</header>
-
-<main>
-  <section id="login-section">
-    <h2>Login</h2>
-    <input type="text" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
-    <button onclick="login()">Login</button>
-    <p id="login-error" class="error"></p>
-  </section>
-
-  <section id="dashboard-section" class="hidden">
-    <nav id="main-nav">
-      <a onclick="showSection('profile')">Profile</a>
-      <a onclick="showSection('add-money')">Add Money</a>
-      <a onclick="showSection('report')">Report</a>
-      <a id="user-management-nav" class="hidden" onclick="showSection('user-management')">User Management</a>
-      <a onclick="logout()">Logout</a>
-    </nav>
-
-    <div id="profile" class="sub-section">
-      <h3>প্রোফাইল</h3>
-      <p><b>নাম:</b> <span id="profile-name"></span></p>
-      <p><b>ইমেইল:</b> <span id="profile-email"></span></p>
-    </div>
-
-    <div id="add-money" class="sub-section hidden"></div>
-
-    <div id="report" class="sub-section hidden">
-      <h3>জমার রিপোর্ট</h3>
-
-      <!-- মাস ও বছর আলাদা ফিল্টার -->
-      <div class="filter-section">
-        <label for="filterMonth">মাস:</label>
-        <select id="filterMonth">
-          <option value="">সব মাস</option>
-          <option value="January">জানুয়ারি</option>
-          <option value="February">ফেব্রুয়ারি</option>
-          <option value="March">মার্চ</option>
-          <option value="April">এপ্রিল</option>
-          <option value="May">মে</option>
-          <option value="June">জুন</option>
-          <option value="July">জুলাই</option>
-          <option value="August">আগস্ট</option>
-          <option value="September">সেপ্টেম্বর</option>
-          <option value="October">অক্টোবর</option>
-          <option value="November">নভেম্বর</option>
-          <option value="December">ডিসেম্বর</option>
-        </select>
-
-        <label for="filterYear">বছর:</label>
-        <select id="filterYear">
-          <option value="">সব বছর</option>
-          <option value="2025">২০২৫</option>
-          <option value="2026">২০২৬</option>
-          <option value="2027">২০২৭</option>
-          <option value="2028">২০২৮</option>
-          <option value="2029">২০২৯</option>
-          <option value="2030">২০৩০</option>
-          <option value="2031">২০৩১</option>
-          <option value="2032">২০৩২</option>
-          <option value="2033">২০৩৩</option>
-          <option value="2034">২০৩৪</option>
-        </select>
-      </div>
-
-      <table>
-        <thead>
-          <tr>
-            <th>নাম</th>
-            <th>তারিখ</th>
-            <th>পরিমাণ (৳)</th>
-            <th>মাধ্যম</th>
-            <th>মাস</th>
-          </tr>
-        </thead>
-        <tbody id="report-body"></tbody>
-        <tfoot>
-          <tr>
-            <th colspan="2">মোট</th>
-            <th id="total-amount">০</th>
-            <th colspan="2"></th>
-          </tr>
-        </tfoot>
-      </table>
-    </div>
-
-    <div id="user-management" class="sub-section hidden">
-      <h3>User Management</h3>
-
-      <h4>Add New User</h4>
-      <input type="text" id="new-user-name" placeholder="নাম" />
-      <input type="email" id="new-user-email" placeholder="ইমেইল" />
-      <input type="password" id="new-user-password" placeholder="পাসওয়ার্ড" />
-      <select id="new-user-role">
-        <option value="user">User</option>
-        <option value="admin">Admin</option>
-      </select>
-      <button onclick="addUser()">Add User</button>
-      <p id="add-user-msg" class="success"></p>
-      
-      <h4>Existing Users</h4>
-      <table>
-        <thead>
-          <tr>
-            <th>নাম</th>
-            <th>ইমেইল</th>
-            <th>রোল</th>
-            <th>একশন</th>
-          </tr>
-        </thead>
-        <tbody id="user-list-body"></tbody>
-      </table>
-    </div>
-
-  </section>
-</main>
-
-<script>
-  if (!localStorage.getItem('users')) {
-    const initialUsers = [
-      { email: "admin@mail.com", password: "admin123", name: "Admin", role: "admin" },
-      { email: "user@mail.com", password: "user123", name: "User", role: "user" }
-    ];
-    localStorage.setItem('users', JSON.stringify(initialUsers));
-  }
-
-  let currentUser = null;
-
-  function login() {
-    const email = document.getElementById("email").value.trim();
-    const password = document.getElementById("password").value.trim();
-    const users = JSON.parse(localStorage.getItem('users'));
-    const user = users.find(u => u.email === email && u.password === password);
-
-    if (!user) {
-      document.getElementById("login-error").innerText = "ভুল ইমেইল বা পাসওয়ার্ড!";
-      return;
-    }
-
-    currentUser = user;
-    document.getElementById("login-error").innerText = "";
-    document.getElementById("login-section").classList.add("hidden");
-    document.getElementById("dashboard-section").classList.remove("hidden");
-    showSection("profile");
-
-    document.getElementById("profile-name").innerText = user.name;
-    document.getElementById("profile-email").innerText = user.email;
-
-    const addMoneySection = document.getElementById("add-money");
-    const userManagementNav = document.getElementById("user-management-nav");
-
-    if (user.role === "admin") {
-      addMoneySection.classList.remove("hidden");
-      addMoneySection.innerHTML = `
-        <h3>জমার তথ্য যুক্ত করুন</h3>
-        <input type="text" id="payer-name" placeholder="জমাদাতার নাম" />
-        <input type="date" id="pay-date" />
-        <input type="number" id="pay-amount" placeholder="পরিমাণ (৳)" />
-        <select id="pay-method">
-          <option value="">মাধ্যম নির্বাচন করুন</option>
-          <option value="বিকাশ">বিকাশ</option>
-          <option value="নগদ">নগদ</option>
-          <option value="রকেট">রকেট</option>
-        </select>
-        <input type="text" id="pay-month" placeholder="মাস (ইংরেজিতে যেমন January)" />
-        <button onclick="addPayment()">জমা সংরক্ষণ করুন</button>
-        <p id="add-pay-msg" class="success"></p>
-      `;
-      userManagementNav.classList.remove("hidden");
-      loadUsers();
-    } else {
-      addMoneySection.classList.remove("hidden");
-      addMoneySection.innerHTML = `
-        <h3>পেমেন্টের তথ্য</h3>
-        <p><b>বিকাশ নম্বর:</b> 01602512451</p>
-        <p><b>নগদ নম্বর:</b> 01602512451</p>
-        <p><b>রকেট নম্বর:</b> 01602512451</p>
-        <p><b>ব্যাংক অ্যাকাউন্ট:</b> ___________________________</p>
-        <p>উপরের যেকোনো মাধ্যমে টাকা পাঠিয়ে দিন। রিপোর্টে তথ্য দেখাবে যখন Admin ইনপুট দেবে।</p>
-      `;
-      userManagementNav.classList.add("hidden");
-    }
-
-    loadPayments();
-  }
-
-  function logout() {
-    currentUser = null;
-    document.getElementById("dashboard-section").classList.add("hidden");
-    document.getElementById("login-section").classList.remove("hidden");
-  }
-
-  function showSection(id) {
-    document.querySelectorAll(".sub-section").forEach(s => s.classList.add("hidden"));
-    document.getElementById(id).classList.remove("hidden");
-  }
-
-  // জমা যোগ করার ফাংশন
-  function addPayment() {
-    const name = document.getElementById("payer-name").value.trim();
-    const date = document.getElementById("pay-date").value;
-    const amount = parseFloat(document.getElementById("pay-amount").value);
-    const method = document.getElementById("pay-method").value;
-    const month = document.getElementById("pay-month").value.trim();
-
-    if (!name || !date || isNaN(amount) || !method || !month) {
-      alert("সব তথ্য পূরণ করুন!");
-      return;
-    }
-
-    const newData = { name, date, amount, method, month };
-    const payments = JSON.parse(localStorage.getItem("payments") || "[]");
-    payments.push(newData);
-    localStorage.setItem("payments", JSON.stringify(payments));
-
-    document.getElementById("add-pay-msg").innerText = "জমা সফলভাবে সংরক্ষণ হয়েছে ✅";
-    document.getElementById("payer-name").value = "";
-    document.getElementById("pay-date").value = "";
-    document.getElementById("pay-amount").value = "";
-    document.getElementById("pay-method").value = "";
-    document.getElementById("pay-month").value = "";
-
-    loadPayments();
-  }
-
-  // রিপোর্ট লোড করার ফাংশন মাস ও বছর ফিল্টার দিয়ে
-  function loadPayments(filterMonth = "", filterYear = "") {
-    const payments = JSON.parse(localStorage.getItem("payments") || "[]");
-    const body = document.getElementById("report-body");
-    body.innerHTML = "";
-    let total = 0;
-
-    let filteredPayments = payments;
-
-    if (filterMonth) {
-      filteredPayments = filteredPayments.filter(p => p.month === filterMonth);
-    }
-
-    if (filterYear) {
-      filteredPayments = filteredPayments.filter(p => {
-        const yearFromDate = new Date(p.date).getFullYear().toString();
-        return yearFromDate === filterYear;
-      });
-    }
-
-    filteredPayments.forEach(p => {
-      total += p.amount;
-      body.innerHTML += `
-        <tr>
-          <td>${p.name}</td>
-          <td>${p.date}</td>
-          <td>${p.amount.toFixed(2)}</td>
-          <td>${p.method}</td>
-          <td>${p.month}</td>
-        </tr>
-      `;
-    });
-
-    document.getElementById("total-amount").innerText = total.toFixed(2);
-  }
-
-  // ইউজার লোড করার ফাংশন (admin এর জন্য)
-  function loadUsers() {
-    const users = JSON.parse(localStorage.getItem('users') || "[]");
-    const tbody = document.getElementById("user-list-body");
-    tbody.innerHTML = "";
-
-    users.forEach((user, index) => {
-      tbody.innerHTML += `
-        <tr>
-          <td>${user.name}</td>
-          <td>${user.email}</td>
-          <td>${user.role}</td>
-          <td><button onclick="removeUser(${index})" style="background:#cc0000;">Remove</button></td>
-        </tr>
-      `;
-    });
-  }
-
-  // নতুন ইউজার যোগ করার ফাংশন (admin এর জন্য)
-  function addUser() {
-    const name = document.getElementById("new-user-name").value.trim();
-    const email = document.getElementById("new-user-email").value.trim();
-    const password = document.getElementById("new-user-password").value.trim();
-    const role = document.getElementById("new-user-role").value;
-
-    if (!name || !email || !password) {
-      alert("সব তথ্য পূরণ করুন!");
-      return;
-    }
-
-    let users = JSON.parse(localStorage.getItem('users') || "[]");
-
-    if(users.some(u => u.email === email)) {
-      alert("এই ইমেইল দিয়ে একজন ইউজার আগে থেকেই আছে!");
-      return;
-    }
-
-    users.push({ name, email, password, role });
-    localStorage.setItem('users', JSON.stringify(users));
-
-    document.getElementById("new-user-name").value = "";
-    document.getElementById("new-user-email").value = "";
-    document.getElementById("new-user-password").value = "";
-    document.getElementById("new-user-role").value = "user";
-
-    document.getElementById("add-user-msg").innerText = "নতুন ইউজার সফলভাবে যুক্ত হয়েছে।";
-    loadUsers();
-  }
-
-  // ইউজার রিমুভ করার ফাংশন (admin এর জন্য)
-  function removeUser(index) {
-    if (!confirm("নিশ্চিত কি আপনি এই ইউজারকে মুছে ফেলতে চান?")) return;
-
-    let users = JSON.parse(localStorage.getItem('users') || "[]");
-    if(users[index].email === currentUser.email) {
-      alert("আপনি নিজেকে মুছে ফেলতে পারবেন না!");
-      return;
-    }
-
-    users.splice(index, 1);
-    localStorage.setItem('users', JSON.stringify(users));
-    loadUsers();
-  }
-
-  // মাস ও বছরের Dropdown এ পরিবর্তন এ রিপোর্ট আপডেট হবে
-  document.getElementById("filterMonth").addEventListener("change", function() {
-    const month = this.value;
-    const year = document.getElementById("filterYear").value;
-    loadPayments(month, year);
-  });
-  document.getElementById("filterYear").addEventListener("change", function() {
-    const year = this.value;
-    const month = document.getElementById("filterMonth").value;
-    loadPayments(month, year);
-  });
-
-</script>
-
+  <h1>Hosting</h1>
 </body>
 </html>
