--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
       <div id="profile" class="sub-section">
         <h3>প্রোফাইল</h3>
         <p><b>নাম:</b> <span id="profile-name"></span></p>
+        <p><b>মোবাইল নাম্বার:</b> <span id="profile-mobile number"></span></p>
         <p><b>ইমেইল:</b> <span id="profile-email"></span></p>
       </div>
 
