--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         <a onclick="showSection('profile')">Profile</a>
         <a onclick="showSection('add-money')">Add Money</a>
         <a onclick="showSection('report')">Deposit Report</a>
+         <a onclick="showSection('report')">Spend Report</a>
         <a id="user-management-nav" class="hidden" onclick="showSection('user-management')">User Management</a>
         <a onclick="logout()">Logout</a>
       </nav>
