--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <nav id="main-nav">
         <a onclick="showSection('profile')">Profile</a>
         <a onclick="showSection('add-money')">Add Money</a>
-         <a onclick="showSection('money')">Spend Money</a>
+         <a onclick="showSection('add-money')">Spend Money</a>
         <a onclick="showSection('report')">Deposit Report</a>
          <a onclick="showSection('report')">Spend Report</a>
         <a id="user-management-nav" class="hidden" onclick="showSection('user-management')">User Management</a>
