--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       showSection("profile");
 
       document.getElementById("profile-name").innerText = user.name;
-      document.getElementById("profile-mobile-number").innerText = user.mobile-number;
+      document.getElementById("profile-mobile-number").innerText = user.mobilemumber;
       document.getElementById("profile-email").innerText = user.email;
 
       const addMoneySection = document.getElementById("add-money");
